Allow GPT partition to also be made active.

--- a/usr.bin/mkimg/mkimg.1
+++ b/usr.bin/mkimg/mkimg.1
@@ -164,8 +164,9 @@ The
 option marks a partition as active, if the partitioning
 scheme supports it.
 Currently, only the
+.Ar gpt and
 .Ar mbr
-scheme supports this concept.
+schemes support this concept.
 By default,
 .Nm
 will only mark the first partition as active when boot code is
